chore: Update GC logging flag for Java 21 compatibility